# frozenos_builder

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md
examples/: minimal.yml  ros2.yml
examples/overlay/: autoinstall.yaml
examples/overlay/etc/: motd
src/: builder.rs  cli.rs  config.rs  inspector.rs  lib.rs  main.rs
tests/: phase1.rs
