[package]
name = "frozenos_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.86"
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml_ng = "0.10.0"
walkdir = "2.5.0"
indexmap = "=2.2.6"

[dev-dependencies]
tempfile = "3.10.1"
